--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,8 @@
 body{
     min-height: 100vh;
     font-family: 'Bai Jamjuree', sans-serif;
+    font-size: 18px;
+    color: hsl(210, 10%, 33%);
 }
 ul{
     list-style: none;
@@ -15,3 +17,108 @@ ul{
 
 
 /*-------------------section-one-------------------*/
+
+.section-one{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.section-one div:first-child{
+    background-image: url("../img/bg-header-desktop.png");
+}
+.section-one div:nth-child(2){
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.section-one img{
+    margin-top: 10%;
+}
+.section-one h1{
+    font-size: 2.6rem;
+    margin: 1% 0%;
+}
+.section-one p{
+    max-width: 50%;
+    margin: 1% 0%;
+}
+input{
+    border-radius: 20px;
+    border: none;
+    color: white;
+    width: 200px;
+    height: 35px;
+    margin: 4% 0%;
+}
+.ios{
+    background-color: hsl(233, 100%, 69%);
+}
+.mac{
+    background-color: hsl(171, 66%, 44%);
+}
+
+
+/*-------------------section-two-------------------*/
+
+.section-two{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.section-two div:first-child{
+    max-width: 50%;
+    margin: 4% 0%;
+}
+
+.section-two div:nth-child(2){
+    display: flex;
+}
+.section-two-info{
+    display: flex;
+    flex-direction: column;
+    padding: 5% 5%;
+}
+.section-two-info div:nth-child(1){
+    flex-basis: 30%;
+    max-width: 85%;
+}
+.section-two-info div{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 30%;
+    max-width: 85%;
+}
+
+
+/*-------------------section-three-------------------*/
+
+.section-three{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 7% 0%;
+}
+.section-three div:first-child{
+    max-width: 50%;
+    margin: 5% 0%;
+}
+.section-three img{
+    max-width: 80%;
+}
+
+
+/*-------------------section-four-------------------*/
+
+.section-four{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
